Fixing hamburger menu spacing

--- a/service_info/static/less/base/header/mobile-nav.less
+++ b/service_info/static/less/base/header/mobile-nav.less
@@ -9,6 +9,7 @@
   a.button-collapse {
     height: @mobile-nav-height;
     line-height: @mobile-nav-height;
+    width: 56px;
     * {
       line-height: inherit;
     }
